--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -3,26 +3,20 @@ h1{
     font-size: 50px;
     font-style: italic;
     margin: 0 50px;
-    color: black;
-    
-    
-        
-    }
+    color: black;    
+   }
 
+html{
+    background-image: url(../images/background.png);
+    background-color: #f4e9e9;
+    cursor: url(../images/a.cur), auto;
+}
+img{
     
-    html{
-        background-image: url("../images/background.jpg");
-        background-color: #f4e9e9;
-        cursor: url(../images/a.cur), auto;
-    }
-    img{
-        
-        margin: 50px 50px 0px 50px;
-        border: 2px solid black;
-    
-    }
-    
-    body{
-      
-        text-align: center;
-    }
+    margin: 50px 50px 0px 50px;
+    border: 2px solid black;
+}
+
+body{
+    text-align: center;
+}
