--- a/stylesheets/mycss.css
+++ b/stylesheets/mycss.css
@@ -7,7 +7,7 @@ h1{
 }
 
 html{
-  /* background-image: url(../images/background.jpg); */
+  background-image: url(../images/background.png);
   background-color: grey;
   cursor: url(../images/a.cur), auto;
 }
