--- a/3d models/orthographic_projections/stylesheets/contacts.css
+++ b/3d models/orthographic_projections/stylesheets/contacts.css
@@ -11,7 +11,7 @@ font-size: 50px;
 
 
 html{
-
+  background-image: url(../images/background.png);
   background-color: #f4e9e9;
   cursor: url(../images/a.cur), auto;
 }
