--- a/stylesheets/contacts.css
+++ b/stylesheets/contacts.css
@@ -8,6 +8,7 @@ html{
   background-image: url(../images/background.png);
   background-color: #f4e9e9;
   cursor: url(../images/a.cur), auto;
+  font-weight: bold;
 }
 img{    
 margin: 50px 50px 0px 50px;
