--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -10,6 +10,7 @@ html{
     background-image: url(../images/background.png);
     background-color: #f4e9e9;
     cursor: url(../images/a.cur), auto;
+    font-weight: bold;
 }
 img{
     
