--- a/css/mycss.css
+++ b/css/mycss.css
@@ -7,7 +7,7 @@ h1{
 }
 
 html{
-  background-image: url(../images/background.png);
+  background-image: url(../images/lowsizebackground.jpg);
   background-color: grey;
   cursor: url(../images/a.cur), auto;
   font-weight: bold;
