--- a/css/sheet.css
+++ b/css/sheet.css
@@ -14,8 +14,8 @@ img{
 margin: 50px 50px 0px 50px;
 border: 2px solid black;
 border-radius: 18px;
-/* height: 300px;
-width: 300px; */
+height: 300px;
+width: 300px;
 }
 
 .youtube-video
