--- a/css/content.css
+++ b/css/content.css
@@ -8,7 +8,7 @@ h1{
    }
 
 html{
-    background-image: url(../images/lowsizebackground.jpg);
+    background-image: url(../images/background.jpg);
     background-color: #f4e9e9;
     cursor: url(../images/a.cur), auto;
     font-weight: bold;
