--- a/css/sheet.css
+++ b/css/sheet.css
@@ -5,7 +5,7 @@ font-style: italic;
 margin: 0 50px;  
 }
 html{
-  background-image: url(../images/lowsizebackground.jpg);
+  background-image: url(../images/background.jpg);
   background-color: #f4e9e9;
   cursor: url(../images/a.cur), auto;
   font-weight: bold;
