--- a/css/sheet.css
+++ b/css/sheet.css
@@ -1,14 +1,23 @@
+html{
+  background-image: url(../images/background.jpg);
+  background-color: #f4e9e9;
+  cursor: url(../images/a.cur), auto;
+  font-weight: bold;
+}
+
 h1{
 
 font-size: 50px;
 font-style: italic;
 margin: 0 50px;  
 }
-html{
-  background-image: url(../images/background.jpg);
-  background-color: #f4e9e9;
-  cursor: url(../images/a.cur), auto;
-  font-weight: bold;
+p
+{
+  font-size: 20px;
+  color: green;
+}
+a{
+  color: green;
 }
 img{    
 margin: 50px 50px 0px 50px;
