--- a/css/mycss.css
+++ b/css/mycss.css
@@ -3,7 +3,7 @@ h1{
   font-size: 100px;
   font-style: italic;
   text-align: center;
-  margin: 260px auto 0;
+  margin: 150px auto 0;
 }
 
 html{
@@ -18,4 +18,18 @@ p{
   font-style: italic;
   text-align: center;
   margin:50px;
+}
+button
+{
+  font-size: 100px;
+  font-style: italic;
+  font-weight:bold;
+  text-align: center;
+  height: 130px;
+  width: 400px;
+  border: black;
+  border-radius: 38px;
+  background-color: rgba(78, 100, 228, 0.5);
+  margin: 25px 530px 0;
+  cursor: pointer;
 }
