--- a/css/mycss.css
+++ b/css/mycss.css
@@ -1,9 +1,9 @@
 h1{
 
-  font-size: 100px;
+  font-size: 50px;
   font-style: italic;
   text-align: center;
-  margin: 150px auto 0;
+  margin: 10px auto 0px;
 }
 
 html{
@@ -14,22 +14,60 @@ html{
 }
 
 p{
-  font-size: 100px;
   font-style: italic;
   text-align: center;
-  margin:50px;
 }
 button
 {
-  font-size: 100px;
+  font-size: 35px;
   font-style: italic;
   font-weight:bold;
   text-align: center;
-  height: 130px;
-  width: 400px;
+  height: 50px;
+  width: 100px;
   border: black;
   border-radius: 38px;
   background-color: rgba(78, 100, 228, 0.5);
-  margin: 25px 530px 0;
+  margin: 0px 10px 0;
   cursor: pointer;
+}
+
+#liscence-agreement
+{
+  /* border: 2px solid black; */
+  width: 100%;
+  height: 600px;
+  border-radius: 10px;
+  background-color: rgba(78,100,228,0.1);
+}
+#yesno
+{
+    margin: 30px 600px 20px;
+}
+h1#thankyou
+{
+  margin: 100px 600px 0;
+}
+p#disclaimer
+{
+  margin: 15px auto 0;
+  font-size: 40px;
+  color: purple;
+}
+p#accept
+{
+  font-size: 35px;
+  color: red;
+  margin: 100px auto 0;
+}
+p.terms
+{
+  font-size: 25px;
+  color: green;
+}
+p#myterms
+{
+  font-size: 30px;
+  color: maroon;
+  margin: 50px 0;
 }
