--- a/css/mycss.css
+++ b/css/mycss.css
@@ -8,7 +8,7 @@ h1{
 
 html{
   background-image: url(../images/background.jpg);
-  background-color: grey;
+  background-color: rgba(78, 100, 228, 0.5);
   cursor: url(../images/a.cur), auto;
   font-weight: bold;
 }
