--- a/css/model-viewer.css
+++ b/css/model-viewer.css
@@ -43,6 +43,14 @@ height: 100%;
 width: 100%;
 }
 
+img#isometric{    
+margin: 5px auto;
+border-radius: 10px;
+height: 700px;
+width: 1000px;
+margin-left: 210px;
+}
+
 embed
 {
 border-radius: 10px;
