--- a/css/model-viewer.css
+++ b/css/model-viewer.css
@@ -47,7 +47,8 @@ img#isometric{
 margin: 5px auto;
 border-radius: 10px;
 height: 700px;
-width: 1000px;
+/* width: 1000px; */
+width: 100%;
 margin-left: 210px;
 }
 
