--- a/css/model-viewer.css
+++ b/css/model-viewer.css
@@ -47,8 +47,7 @@ img#isometric{
 margin: 5px auto;
 border-radius: 10px;
 height: 700px;
-/* width: 1000px; */
-width: 100%;
+width: 1000px;
 margin-left: 210px;
 }
 
